sas-core/main/default/objects/LiveChatTranscript/fields/FCS_CaseRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>FCS_CaseRecordTypeName__c</fullName>
    <description>Record type developer name of the case to be created from the LiveChatTranscrip record</description>
    <label>Case Record Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information</fullName>
                <default>true</default>
                <label>Information</label>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>