sas-core/main/default/objects/LiveChatTranscript/fields/FCS_CODSId__c.field-meta.xml
<CustomField>
    <fullName>FCS_CODSId__c</fullName>
    <description>The customers related CODS Id. Mostly used for Customers who has a login but arent EuroBonus members</description>
    <label>CODS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>