sas-core/main/default/objects/LiveChatTranscript/fields/FCS_Consent__c.field-meta.xml
<CustomField>
    <fullName>FCS_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether consent was obtained from the user to store the chat transcript for a longer retention period.</description>
    <label>Consent</label>
    <type>Checkbox</type>
</CustomField>