sas-core/main/default/objects/LiveChatTranscript/fields/FCS_EBNumber__c.field-meta.xml
<CustomField>
    <fullName>FCS_EBNumber__c</fullName>
    <description>EuroBonus Number of the person contacting SAS</description>
    <label>EuroBonus Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>