sas-core/main/default/objects/LiveChatTranscript/fields/FCS_LoggedIn__c.field-meta.xml
<CustomField>
    <fullName>FCS_LoggedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the customer was logged in to SAS when the chat was created.</description>
    <label>Logged In</label>
    <type>Checkbox</type>
</CustomField>