sas-core/main/default/objects/LiveChatTranscript/fields/Initially_Provided_PNR__c.field-meta.xml
<CustomField>
    <fullName>Initially_Provided_PNR__c</fullName>
    <label>Initially provided PNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>